[gd_scene load_steps=7 format=3 uid="uid://wqvmo652mijp"]

[ext_resource type="StyleBox" uid="uid://c0vss8e4jol2v" path="res://scenes/menus/level_designer/fields/text_input.tres" id="2"]
[ext_resource type="Script" path="res://scenes/menus/level_designer/fields/vector2/input_vector2.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://nhc8a44c1st" path="res://scenes/menus/level_designer/ldui/number_up_pressed.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bkr2tkbv7snm1" path="res://scenes/menus/level_designer/ldui/number_down_pressed.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bo0o0vgmras41" path="res://scenes/menus/level_designer/ldui/number_down.png" id="6"]
[ext_resource type="Texture2D" uid="uid://4tbmm1c76o66" path="res://scenes/menus/level_designer/ldui/number_up.png" id="7"]

[node name="Vector2" type="HBoxContainer"]
offset_right = 139.0
offset_bottom = 23.0
theme_override_constants/separation = 1
script = ExtResource("3")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "AAAAA"
horizontal_alignment = 2

[node name="SpacingX" type="Control" parent="."]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="LabelX" type="Label" parent="."]
layout_mode = 2
text = "X"
horizontal_alignment = 2

[node name="LineEditX" type="LineEdit" parent="."]
layout_mode = 2
theme_override_styles/normal = ExtResource("2")
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.5

[node name="UpX" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("7")
texture_pressed = ExtResource("4")

[node name="DownX" type="TextureButton" parent="UpX"]
layout_mode = 0
offset_top = 12.0
offset_right = 32.0
offset_bottom = 35.0
texture_normal = ExtResource("6")
texture_pressed = ExtResource("5")

[node name="SpacingY" type="Control" parent="."]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="LabelY" type="Label" parent="."]
layout_mode = 2
text = "Y"
horizontal_alignment = 2

[node name="LineEditY" type="LineEdit" parent="."]
layout_mode = 2
theme_override_styles/normal = ExtResource("2")
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.5

[node name="UpY" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("7")
texture_pressed = ExtResource("4")

[node name="DownY" type="TextureButton" parent="UpY"]
layout_mode = 0
offset_top = 12.0
offset_right = 32.0
offset_bottom = 35.0
texture_normal = ExtResource("6")
texture_pressed = ExtResource("5")

[connection signal="text_changed" from="LineEditX" to="." method="_on_LineEdit_text_changed" binds= ["X"]]
[connection signal="pressed" from="UpX" to="." method="_on_Up_pressed" binds= ["X"]]
[connection signal="pressed" from="UpX/DownX" to="." method="_on_Down_pressed" binds= ["X"]]
[connection signal="text_changed" from="LineEditY" to="." method="_on_LineEdit_text_changed" binds= ["Y"]]
[connection signal="pressed" from="UpY" to="." method="_on_Up_pressed" binds= ["Y"]]
[connection signal="pressed" from="UpY/DownY" to="." method="_on_Down_pressed" binds= ["Y"]]
